[build-system]
# setuptools >= 77 for PEP 639 SPDX license metadata (the `license` string +
# `license-files` below). Older setuptools emits a malformed Metadata-Version
# 2.4 `License-File` field that `twine check` rejects.
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-kontinuum-monitor"
# Version is derived from the Git tag by setuptools-scm (see [tool.setuptools_scm]
# below), matching kontinuum-core. Tag `vX.Y.Z` and build — no hardcoded string
# to bump. Building without a tag yields a dev version; tag `v0.2.0` to release.
dynamic = ["version"]
authors = [{name = "Chance-Konstruktion", email = "introareback@gmail.com"}]
description = "Anomaly / novelty monitor for agent action streams, built on kontinuum-core"
readme = "README.md"
# Core is AGPL-3.0 and this package imports it; the copyleft/network
# obligations propagate, so this repo is AGPL-3.0 too (SPEC.md §5.2). Declared as
# a PEP 639 SPDX expression; the classifier form is deprecated alongside it.
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    # Aligned with the rest of the KONTINUUM family on core 0.6.3 (the current
    # PyPI release; get_diagnostics() landed in 0.6.2). The diagnostics call
    # stays hasattr-guarded for robustness, but pinning >=0.6.3 keeps the family
    # on one core and guarantees the observable-ingestion counters are actually
    # present (SPEC.md §5.1).
    "kontinuum-core>=0.6.3",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
ai-kontinuum-monitor = "ai_kontinuum_monitor.cli:main"

[project.urls]
Homepage = "https://github.com/Chance-Konstruktion/kontinuum-AI-anomaly"
Issues = "https://github.com/Chance-Konstruktion/kontinuum-AI-anomaly/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_kontinuum_monitor*"]

[tool.setuptools.package-data]
ai_kontinuum_monitor = ["py.typed"]

[tool.setuptools_scm]
# Write the resolved version to an importable file so runtime __version__ and
# the built package metadata always agree. The file is generated (git-ignored).
version_file = "ai_kontinuum_monitor/_version.py"
# Build outside a Git checkout with no tags/metadata falls back rather than
# hard-failing.
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
