[build-system]
# setuptools >= 77 for PEP 639 SPDX license metadata (the `license` string +
# `license-files` below). Older setuptools emits a malformed Metadata-Version
# 2.4 `License-File` field that `twine check` rejects.
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "kontinuum-AI-anomaly"
# Version is derived from the Git tag by setuptools-scm (see [tool.setuptools_scm]
# below), matching kontinuum-core. Tag `vX.Y.Z` and build — no hardcoded string
# to bump. Building without a tag yields a dev version; tag `v0.1.0a3` for the
# next (experimental / alpha) release.
dynamic = ["version"]
authors = [{name = "Chance-Konstruktion", email = "introareback@gmail.com"}]
description = "Anomaly / novelty monitor for agent action streams, built on kontinuum-core"
readme = "README.md"
# Core is AGPL-3.0 and this package imports it; the copyleft/network
# obligations propagate, so this repo is AGPL-3.0 too (SPEC.md §5.2). Declared as
# a PEP 639 SPDX expression; the classifier form is deprecated alongside it.
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    # Aligned with the rest of the KONTINUUM family on core 0.6.3 (the current
    # PyPI release; get_diagnostics() landed in 0.6.2). The diagnostics call
    # stays hasattr-guarded for robustness, but pinning >=0.6.3 keeps the family
    # on one core and guarantees the observable-ingestion counters are actually
    # present (SPEC.md §5.1).
    "kontinuum-core>=0.6.3",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
kontinuum-AI-anomaly = "kontinuum_ai_anomaly.cli:main"

[project.urls]
Homepage = "https://github.com/Chance-Konstruktion/kontinuum-AI-anomaly"
Issues = "https://github.com/Chance-Konstruktion/kontinuum-AI-anomaly/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kontinuum_ai_anomaly*"]

[tool.setuptools.package-data]
kontinuum_ai_anomaly = ["py.typed"]

[tool.setuptools_scm]
# Write the resolved version to an importable file so runtime __version__ and
# the built package metadata always agree. The file is generated (git-ignored).
version_file = "kontinuum_ai_anomaly/_version.py"
# Build outside a Git checkout with no tags/metadata falls back rather than
# hard-failing.
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
# Must match `requires-python`. Without it ruff assumes a modern default and
# reports ~190 "use PEP 585/604 syntax" findings (`Dict` -> `dict`,
# `Optional[X]` -> `X | None`) that would be wrong to apply here: this package
# still supports 3.9, and the explicit `typing` spellings are deliberate.
target-version = "py39"
line-length = 100

[tool.ruff.lint]
# Correctness and real-bug rules, not style opinions. The point is a linter whose
# output is worth reading in CI — every finding should be something to act on.
select = [
    "F",      # pyflakes: undefined names, unused imports/variables
    "E9",     # syntax / IO errors
    "B",      # bugbear: likely bugs (mutable defaults, unused loop vars, ...)
    "DTZ",    # naive datetimes — the exact class of defect fixed in #16
    "BLE",    # blind `except Exception` — allowed in sinks, but only on purpose
    "RUF100", # noqa directives that no longer suppress anything
]

[tool.ruff.lint.per-file-ignores]
# Tests deliberately construct naive datetimes to prove they are accepted and
# normalized to UTC, and open files without a context manager in CLI fixtures.
"tests/*" = ["DTZ001", "DTZ005"]
